@@ -1,3 +1,8 @@
+2013-05-26  Gabriel Dos Reis  <gdr@cse.tamu.edu>
+
+	* algebra/boolean.spad.pamphlet (IndexedBits)[<]: Define in Spad.
+	* interp/bits.lisp: Remove.
+
 2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* interp/sys-utility.boot (makeFilename): Move from nlib.lisp.
